examples/test/testpolicy16259.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16259
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key28: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value23
      podSelector:
        matchLabels:
          key23: value18
          key28: value13
          key15: value36
